# rag-from-scratch

./: .dockerignore  .env.example  .env.local  .env.providers  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml
api/: app.py  dependencies.py  main.py  schemas.py
api/routers/: __init__.py  ingestion.py  search.py
api/schemas/: ingestion.py  search.py  sources.py
app/config/: config.yaml  settings.py
config/: app_settings.py  config.yaml  settings.yaml
config/models/: __init__.py  backend.py  embedder.py  generator.py  query_transformer.py  reranker.py  retriever.py  vectorstore.py
eval/: config.yaml  eval_reporter.py  eval_runner.py  eval_settings.py  evaluator.py  loader.py  main.py  ragas_evaluator.py  reporter.py  runner.py  settings.py
eval/config/: config.yaml  settings.py
eval/dataset/: questions.yaml
eval/domain/: __init__.py  eval_run.py  eval_sample.py  pipeline_output.py  question_result.py
eval/evaluators/: __init__.py  base_evaluator.py  ragas_evaluator.py
eval/factories/: __init__.py  client_factory.py  embedder_factory.py  evaluator_factory.py  judge_embeddings_factory.py  judge_llm_factory.py  llm_factory.py  metric_factory.py
eval/interfaces/: __init__.py  evaluator.py  metric.py  reporter.py
eval/metrics/: __init__.py  answer_relevancy.py  context_recall.py  factual_correctness.py  faithfulness.py  latency_metric.py  token_coverage_metric.py
eval/reporters/: __init__.py  console_reporter.py  csv_reporter.py  json_reporter.py
eval/utils/: dateset_loader.py
(+175 files in other folders)
